services/actions-cache/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: actions-cache
  namespace: actions-cache
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: github-actions-cache-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: actions-runners
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: minio
            app.kubernetes.io/instance: minio
      toPorts:
        - ports:
            - port: "9000"
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgresql
      toPorts:
        - ports:
            - port: "5432"
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
            - 100.64.0.0/10
